force-app/main/default/objects/Case/fields/Case_Classification_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Case_Classification_Feedback__c</fullName>
    <description>This field is used to capture user feedback on case categorization automation.</description>
    <label>Case Classification Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>