force-app/main/default/objects/Case/fields/Case_Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Case_Container_Size__c</fullName>
    <formula>IF( ISBLANK( Product__r.Container_size__r.Name),(IF( ISPICKVAL(Other_Container_Size1__c,&quot;&quot;),Null , TEXT( Other_Container_Size1__c ))),Product__r.Container_size__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Container Size</label>
    <type>Text</type>
</CustomField>