force-app/main/default/objects/Case/fields/Case_Deletion_Request__c.field-meta.xml
<CustomField>
    <fullName>Case_Deletion_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be marked by CCNA PII team and the marked cases will be deleted later on via Batch class i.e. CCNA_PIIDataDeletionBatch</description>
    <inlineHelpText>Please mark the case and its respective sibling cases for deletion.</inlineHelpText>
    <label>Case Deletion Request</label>
    <type>Checkbox</type>
</CustomField>