force-app/main/default/objects/Case/fields/Case_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Case External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>