force-app/main/default/objects/Case/fields/Case_Flavour__c.field-meta.xml
<CustomField>
    <fullName>Case_Flavour__c</fullName>
    <formula>IF( ISBLANK(TEXT( Product__r.Flavor_name__c )),(IF( ISBLANK(TEXT(Other_Flavor__c)), Null, TEXT(Other_Flavor__c))),TEXT( Product__r.Flavor_name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flavour</label>
    <type>Text</type>
</CustomField>