force-app/main/default/objects/Case/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>IF(Owner:User.Id !=null,Owner:User.FirstName +&apos; &apos;+Owner:User.LastName, Owner:Queue.QueueName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>