force-app/main/default/objects/Case/fields/Case_Redirection__c.field-meta.xml
<CustomField>
    <fullName>Case_Redirection__c</fullName>
    <description>Use this field values in case you want to redirect a case back to the CIC team.</description>
    <label>Case Redirection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Details to Case</fullName>
            </value>
            <value>
                <fullName>More Information Needed</fullName>
            </value>
            <value>
                <fullName>Not our Vehicle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reassign to Producing Bottler</fullName>
            </value>
            <value>
                <fullName>Reassign to Purchasing Bottler</fullName>
            </value>
            <value>
                <fullName>Request Call Review</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>