force-app/main/default/objects/Case/fields/Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary__c</fullName>
    <description>Used to hold the summary of the Case generated from AFN Case Summary prompt template.</description>
    <label>Case Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>