force-app/main/default/objects/Case/fields/Category_Level3__c.field-meta.xml
<CustomField>
    <fullName>Category_Level3__c</fullName>
    <label>Category Level3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active CokeON_VM</fullName>
            </value>
            <value>
                <fullName>Money related</fullName>
            </value>
            <value>
                <fullName>Installation related</fullName>
            </value>
            <value>
                <fullName>Equipment related</fullName>
            </value>
            <value>
                <fullName>Other inquiries</fullName>
            </value>
            <value>
                <fullName>Change / money related</fullName>
            </value>
            <value>
                <fullName>Sold out</fullName>
            </value>
            <value>
                <fullName>Sample mismatch</fullName>
            </value>
            <value>
                <fullName>No product / many got out</fullName>
            </value>
            <value>
                <fullName>Dirty</fullName>
            </value>
            <value>
                <fullName>Incorrect contact display</fullName>
            </value>
            <value>
                <fullName>Inadequate temperature</fullName>
            </value>
            <value>
                <fullName>Environment issues</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Industry / Sales Policy</fullName>
            </value>
            <value>
                <fullName>Sports/Culture</fullName>
            </value>
            <value>
                <fullName>Trademark / Goods etc.</fullName>
            </value>
            <value>
                <fullName>Coke ON related</fullName>
            </value>
            <value>
                <fullName>Sales/Sales office</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>A letter of thanks/Encouragement</fullName>
            </value>
            <value>
                <fullName>Product recall</fullName>
            </value>
            <value>
                <fullName>TVCM</fullName>
            </value>
            <value>
                <fullName>Radio CM</fullName>
            </value>
            <value>
                <fullName>Web advertisement</fullName>
            </value>
            <value>
                <fullName>Newspaper / magazine advertisement</fullName>
            </value>
            <value>
                <fullName>Other advertisement inquiries</fullName>
            </value>
            <value>
                <fullName>Sticky</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Lucky cap</fullName>
            </value>
            <value>
                <fullName>Nearpack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>