force-app/main/default/objects/Case/fields/Category_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Category_Level_1__c</fullName>
    <label>Category Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_Level4__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Coke ON application</fullName>
                <isActive>false</isActive>
                <label>Coke ON application</label>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Drink Ticket</fullName>
                <isActive>false</isActive>
                <label>Drink Ticket</label>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Non Quality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Stamp</fullName>
                <isActive>false</isActive>
                <label>Stamp</label>
            </value>
            <value>
                <fullName>Vending machine</fullName>
                <isActive>false</isActive>
                <label>Vending machine</label>
            </value>
            <value>
                <fullName>Web/Campaign</fullName>
                <isActive>false</isActive>
                <label>Web/Campaign</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>