force-app/main/default/objects/Case/fields/Category_Level_1_CPC__c.field-meta.xml
<CustomField>
    <fullName>Category_Level_1_CPC__c</fullName>
    <label>Category Level 1 (CPC)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_Level_4_CPC__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Non Quality</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>