force-app/main/default/objects/Case/fields/Category_Level_4_CPC__c.field-meta.xml
<CustomField>
    <fullName>Category_Level_4_CPC__c</fullName>
    <label>Category Level 4 (CPC)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_Level3__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>About Login</fullName>
            </value>
            <value>
                <fullName>About Mail Magazine</fullName>
            </value>
            <value>
                <fullName>About Password</fullName>
            </value>
            <value>
                <fullName>About Products</fullName>
            </value>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Authentication (Int)</fullName>
            </value>
            <value>
                <fullName>Authentication (Non)</fullName>
            </value>
            <value>
                <fullName>Authentication (SP)</fullName>
            </value>
            <value>
                <fullName>Available VM</fullName>
            </value>
            <value>
                <fullName>Brandsite</fullName>
            </value>
            <value>
                <fullName>Broken (Int)</fullName>
            </value>
            <value>
                <fullName>Broken (Non)</fullName>
            </value>
            <value>
                <fullName>Broken (SP)</fullName>
            </value>
            <value>
                <fullName>CCBJI Mail News</fullName>
            </value>
            <value>
                <fullName>Change details of Coca-Cola Members</fullName>
            </value>
            <value>
                <fullName>Change Input Address</fullName>
            </value>
            <value>
                <fullName>Change Input Address (Int)</fullName>
            </value>
            <value>
                <fullName>Check Input Address</fullName>
            </value>
            <value>
                <fullName>Check Input Address (Int)</fullName>
            </value>
            <value>
                <fullName>Chunk</fullName>
            </value>
            <value>
                <fullName>Cmode</fullName>
            </value>
            <value>
                <fullName>COC</fullName>
            </value>
            <value>
                <fullName>Coca-Cola News</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Park</fullName>
            </value>
            <value>
                <fullName>Coca-Cola System</fullName>
            </value>
            <value>
                <fullName>Consumed (Int)</fullName>
            </value>
            <value>
                <fullName>Consumed (Non)</fullName>
            </value>
            <value>
                <fullName>Consumed (SP)</fullName>
            </value>
            <value>
                <fullName>Cooperate</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>