force-app/main/default/objects/Case/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Branch origin</fullName>
            </value>
            <value>
                <fullName>Operator (outsourcing company) origin</fullName>
            </value>
            <value>
                <fullName>Manufacturing origin</fullName>
            </value>
            <value>
                <fullName>Logistics origin (large transportation)</fullName>
            </value>
            <value>
                <fullName>Dealer origin</fullName>
            </value>
            <value>
                <fullName>Distribution center origin</fullName>
            </value>
            <value>
                <fullName>Consumer origin</fullName>
            </value>
            <value>
                <fullName>Product / Container design</fullName>
            </value>
            <value>
                <fullName>Mischief begging</fullName>
            </value>
            <value>
                <fullName>Appearance quality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
                <isActive>false</isActive>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Not specified</fullName>
                <isActive>false</isActive>
                <label>Not specified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>