force-app/main/default/objects/Case/fields/Cause_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cause_Detail__c</fullName>
    <label>Cause Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handling</fullName>
            </value>
            <value>
                <fullName>Expired expiration date</fullName>
            </value>
            <value>
                <fullName>Long-term warming</fullName>
            </value>
            <value>
                <fullName>Lack of rotation</fullName>
            </value>
            <value>
                <fullName>Sales and storage method</fullName>
            </value>
            <value>
                <fullName>Sales Promotion</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Vending machine column setting mistake</fullName>
            </value>
            <value>
                <fullName>Out of stock</fullName>
            </value>
            <value>
                <fullName>Vending machine environment</fullName>
            </value>
            <value>
                <fullName>Vending machine failure etc.</fullName>
            </value>
            <value>
                <fullName>Cup vending machine in general</fullName>
            </value>
            <value>
                <fullName>Dispenser in general</fullName>
            </value>
            <value>
                <fullName>Sales Other</fullName>
            </value>
            <value>
                <fullName>Storage / Drinking method (including foods etc.)</fullName>
            </value>
            <value>
                <fullName>Points pointed out (by customer) unconfirmed/not checked</fullName>
            </value>
            <value>
                <fullName>Consumer Other (catalase positive etc.)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
                <isActive>false</isActive>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Not specified</fullName>
                <isActive>false</isActive>
                <label>Not specified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>