force-app/main/default/objects/Case/fields/CCNA_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>CCNA_Plant_Name__c</fullName>
    <label>CCNA Plant Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>