force-app/main/default/objects/Case/fields/Changed_Plant_Code_From__c.field-meta.xml
<CustomField>
    <fullName>Changed_Plant_Code_From__c</fullName>
    <label>Changed Plant Code From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>