force-app/main/default/objects/Case/fields/Channel_of_Answer__c.field-meta.xml
<CustomField>
    <fullName>Channel_of_Answer__c</fullName>
    <description>Used for LATAM to capture the channel through which the response was provided. 
BU :- LATAM</description>
    <label>Channel of Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Forum</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Other Social Network</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Corporate Channels</fullName>
            </value>
            <value>
                <fullName>Bottler Channels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>