force-app/main/default/objects/Case/fields/Chat_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Chat_Case_Reason__c</fullName>
    <label>Chat Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>CokeON_VM</fullName>
            </value>
            <value>
                <fullName>Got no stamps</fullName>
            </value>
            <value>
                <fullName>How-to-use</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Login/Profile</fullName>
            </value>
            <value>
                <fullName>Obstacle/Maintenance</fullName>
            </value>
            <value>
                <fullName>Others(CR)</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Unavailable Coke ON Pay/Pass</fullName>
            </value>
            <value>
                <fullName>Unavailable Connect with bluetooth</fullName>
            </value>
            <value>
                <fullName>Unavailable Drink ticket</fullName>
            </value>
            <value>
                <fullName>Unavailable Sampling ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>