force-app/main/default/objects/Case/fields/Check_Letter_Generated_or_Not__c.field-meta.xml
<CustomField>
    <fullName>Check_Letter_Generated_or_Not__c</fullName>
    <label>Check Letter Generated or Not</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter Not Generated</fullName>
            </value>
            <value>
                <fullName>Letter Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>