force-app/main/default/objects/Case/fields/Claim_Involved__c.field-meta.xml
<CustomField>
    <fullName>Claim_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Bottler Use Only.</inlineHelpText>
    <label>Claim Involved ?</label>
    <type>Checkbox</type>
</CustomField>