force-app/main/default/objects/Case/fields/Coke_ON_ID__c.field-meta.xml
<CustomField>
    <fullName>Coke_ON_ID__c</fullName>
    <label>Coke ON ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>