force-app/main/default/objects/Case/fields/Collect_Sample__c.field-meta.xml
<CustomField>
    <fullName>Collect_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On Escalation
Send notification after saving case</description>
    <label>Collect Sample</label>
    <type>Checkbox</type>
</CustomField>