force-app/main/default/objects/Case/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Enter the reason behind the Case Redirection within 400 characters.</inlineHelpText>
    <label>Comment</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>