force-app/main/default/objects/Case/fields/Comments_By_Bottler_Team__c.field-meta.xml
<CustomField>
    <fullName>Comments_By_Bottler_Team__c</fullName>
    <description>Used for LATAM to store bottler team comments. 
BU :- LATAM</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>