force-app/main/default/objects/Case/fields/Comments_By_Contact1__c.field-meta.xml
<CustomField>
    <fullName>Comments_By_Contact1__c</fullName>
    <description>Used for LATAM to capture comments provided by Contact 1 for the case.  
BU :- LATAM</description>
    <label>Comments By Contact1</label>
    <type>TextArea</type>
</CustomField>