force-app/main/default/objects/Case/fields/Comments_By_Contact2__c.field-meta.xml
<CustomField>
    <fullName>Comments_By_Contact2__c</fullName>
    <description>Used for LATAM to capture comments provided by Contact 2 for the case. 
BU :- LATAM</description>
    <label>Comments By Contact2</label>
    <type>TextArea</type>
</CustomField>