force-app/main/default/objects/Case/fields/Comments_By_Contact3__c.field-meta.xml
<CustomField>
    <fullName>Comments_By_Contact3__c</fullName>
    <description>Used for LATAM to capture comments provided by Contact 3 for the case.
BU :- LATAM</description>
    <label>Comments By Contact3</label>
    <type>TextArea</type>
</CustomField>