force-app/main/default/objects/Case/fields/Comments_for_Ecommerce_Team__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_Ecommerce_Team__c</fullName>
    <description>Used for LATAM to store comments for the Ecommerce team. 
BU :- LATAM</description>
    <label>Comments for Ecommerce Team</label>
    <type>TextArea</type>
</CustomField>