force-app/main/default/objects/Case/fields/Consumer_Availability__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Availability__c</fullName>
    <description>Used for LATAM to capture consumer availability.
BU :- LATAM</description>
    <label>Consumer Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Business Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>