force-app/main/default/objects/Case/fields/Consumer_First_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Consumer_First_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for LATAM to capture the first consumer recontact attempt. 
BU :- LATAM</description>
    <label>Consumer First Attempt</label>
    <type>Checkbox</type>
</CustomField>