force-app/main/default/objects/Case/fields/Consumer_Handlings__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Handlings__c</fullName>
    <label>Consumer Handlings</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>