force-app/main/default/objects/Case/fields/Consumer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Profile__c</fullName>
    <description>Used for LATAM to determine consumer profile details. 
BU :- LATAM</description>
    <label>Consumer Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media/Journalists direct contact</fullName>
            </value>
            <value>
                <fullName>Local Food Safety Authority</fullName>
            </value>
            <value>
                <fullName>Education Channel</fullName>
            </value>
            <value>
                <fullName>Medical and legal professions</fullName>
            </value>
            <value>
                <fullName>National customers&apos; head office</fullName>
            </value>
            <value>
                <fullName>High level social media influencer</fullName>
            </value>
            <value>
                <fullName>Involves a child &lt;18 years old</fullName>
            </value>
            <value>
                <fullName>Pregnant Women</fullName>
            </value>
            <value>
                <fullName>Involves a child &lt;12 years old</fullName>
            </value>
            <value>
                <fullName>Involves old person  &gt; 60 years old</fullName>
            </value>
            <value>
                <fullName>Alergic</fullName>
            </value>
            <value>
                <fullName>Diabetics</fullName>
            </value>
            <value>
                <fullName>Phisical disability</fullName>
            </value>
            <value>
                <fullName>Phenylketonuria</fullName>
            </value>
            <value>
                <fullName>Severe condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>