force-app/main/default/objects/Case/fields/Consumer_Second_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Second_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for LATAM to capture the second consumer recontact attempt.
BU :- LATAM</description>
    <label>Consumer Second Attempt</label>
    <type>Checkbox</type>
</CustomField>