force-app/main/default/objects/Case/fields/Consumer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Sentiment__c</fullName>
    <label>Consumer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>