force-app/main/default/objects/Case/fields/Consumer_Third_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Third_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for LATAM to capture the third consumer recontact attempt.
BU:- LATAM</description>
    <label>Consumer Third Attempt</label>
    <type>Checkbox</type>
</CustomField>