force-app/main/default/objects/Case/fields/Contact_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Phone__c</fullName>
    <label>Contact Mobile Phone</label>
    <type>Phone</type>
</CustomField>