force-app/main/default/objects/Case/fields/Container_name__c.field-meta.xml
<CustomField>
    <fullName>Container_name__c</fullName>
    <label>Container name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>