force-app/main/default/objects/Case/fields/Convert1__c.field-meta.xml
<CustomField>
    <fullName>Convert1__c</fullName>
    <description>Formula to calculate the number of days between created date and closed date excluding weekends.</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convert1</label>
    <type>Date</type>
</CustomField>