force-app/main/default/objects/Case/fields/Convert2__c.field-meta.xml
<CustomField>
    <fullName>Convert2__c</fullName>
    <description>Formula to calculate the number of days between created date and closed date excluding weekends.</description>
    <formula>DATEVALUE(ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convert2</label>
    <type>Date</type>
</CustomField>